[package]
name = "wingedcap-interactive-server"
version = "0.1.0"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wingedcap = "0.1.3"

cross-storage = "0.1.1"
cross-clipboard = "0.1.1"

dioxus = { version = "0.6.0", features = [] }
dioxus-sdk = { version = "0.6.0", features = ["storage"] }

dioxus-logger = "0.5.1"
tracing = "0.1.41"
tracing-wasm = "0.2.1"

dotenv = { version = "0.15.0", features = ["cli"] }

strum = { version = "0.27.1", default-features = false, features = ["derive"] }
strum_macros = "0.27.2"

dirs = "6.0.0"

rand = "0.9.2"
getrandom = {version = "0.3.3", features = ["wasm_js"]}
uuid = { version = "1.0", features = ["v4"] }

reqwest = { version = "0.12.23", features = ["json"] }
futures-util = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"

jni = "0.21.1"
anyhow = "1.0"

tailwind_fuse = { version = "0.3.2", features = ["variant"] }

lucide-dioxus = { version = "2.1.0", features = ["all-icons"] }

dioxus-tw-components = "0.1.9"
dioxus-tw-components-macro = "0.1.0"

chrono = "0.4.39"

tokio-tungstenite-wasm = { version = "0.6.0", features = ["native-tls"] }
tokio = { version = "1.43.0", features = ["rt", "time", "macros"] }

#[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3.77", features =["Storage", "Window", "Navigator", "Clipboard", "ClipboardEvent"] }
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
arboard = "3"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
dioxus-mobile = "0.6.2"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"



